--- a/CBD.html
+++ b/CBD.html
@@ -142,6 +142,7 @@
                 <a href="https://compassionatecare.greencompassglobal.com/"
                     class="button primary large aestheticButtons cbButton">Buy
                     Now</a>
+                <img style="" class="QR" src="images/frame.png" alt="" />
             </div>
         </section>
     </article>
@@ -151,11 +152,11 @@
         <div class="inner">
             <section class="about">
                 <h4 class="major">Hours</h4>
-                <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp;
-                    Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <p>8:00 am - 4:00 pm &nbsp;&nbsp;&nbsp; Monday - Friday</br>8:00 am - 5:30 pm &nbsp;&nbsp;&nbsp;
+                    Wednesday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
                     Sunday</br>
-                    Extended hours are available by appointment only.</p>
+                    8:00 am - 12:00 pm &nbsp; First Saturday of Every Month</p>
                 <ul class="actions">
                     <li><a href="#main" class="button scrolly">Learn more</a></li>
                 </ul>
