--- a/addiction.html
+++ b/addiction.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 </head>
 
 <body class="is-preload">
@@ -56,7 +57,6 @@
                     addiction treatment.
                 </p>
 
-
                 <h4>We Help You Recover From Drug Addiction</h4>
                 <p>
                     <b>-</b> Outpatient addiction services </br>
@@ -64,9 +64,58 @@
                     <b>-</b> Suboxone treatment </br>
                     <b>-</b> Sublocade treatment
                 </p>
-
             </div>
         </section>
+        <div class="testimonials">
+            <div class="innerTest">
+                <h1>Testimonials</h1>
+                <div class="borderTest"></div>
+                <div class="rowTest">
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">Full Name</div>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s</p>
+                        </div>
+                    </div>
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">Full Name</div>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s</p>
+                        </div>
+                    </div>
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">Full Name</div>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </article>
 
     <!-- Footer -->
